--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,9 @@
-<div class="card-columns" >
-    <div class="card" *ngFor="let cancion of nuevosLanzamientos">
-      <img [src]="cancion.images[0].url" class="card-img-top" alt="cancion.artists[0].name">
-      <div class="card-body">
-        <h5 class="card-title">{{cancion.name}}</h5>
-        <p class="card-text">
-            <span class="badge badge-primary" *ngFor="let artista of cancion.artists">{{artista.name}}</span>
-        </p>
-      </div>
-    </div>
+
+<div class="container">
+<h1>Nuevos Lanzamientos</h1>
+
+<app-loading *ngIf="loading"></app-loading>
+
+  <app-tarjetas [items]="nuevosLanzamientos"></app-tarjetas> 
 
 </div>
