--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,8 @@ hr {
 /* Animaciones */
 
 .animated {
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
@@ -64,4 +64,8 @@ hr {
 
 .fadeIn {
     animation-name: fadeIn;
+}
+
+.table{
+    color: white ;
 }
