--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,15 @@
 <div class="container">
 <h1>Nuevos Lanzamientos</h1>
 
+
+
 <app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
+  <h3>Error</h3>
+  <p>{{mensajeError}}</p>
+  
+  </div>
 
   <app-tarjetas [items]="nuevosLanzamientos"></app-tarjetas> 
 
