--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,50 +1,57 @@
 <app-loading class="m-5 animated fadeIn" *ngIf="loading"></app-loading>
+<div *ngIf="!loading" class="container-fluid">
+    <div  class="row">
+        <div class="col-2">
+        <img [src]="artista.images | noimage" class="img-thumbnail img-circle" [alt]="artista.name">
+        </div>
+        <div class="col">
+            <h3>{{artista.name}}</h3>
+            <p>
+                <a [href]="artista.external_urls.spotify"  target="_blank">
+                Ir a la página del artista
+                </a>
+            </p>
+        </div>
+        <div class="col-4 text-rigth">
+            <button [routerLink]="['/search']"  class="btn btn-outline-danger">Volver</button>
+        </div>
 
-<div *ngIf="!loading" class="row">
-    <div class="col-2">
-    <img [src]="artista.images | noimage" class="img-thumbnail img-circle" [alt]="artista.name">
+
     </div>
-    <div class="col">
-        <h3>{{artista.name}}</h3>
-        <p>
-            <a [href]="artista.external_urls.spotify"  target="_blank">
-            Ir a la página del artista
-            </a>
-        </p>
+
+    <div class="row m-5">
+        <div class="col">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Foto</th>
+                        <th>Álbum</th>
+                        <th>Canción</th>
+                        <th>Reproducir</th>
+                        <!-- <th></th> -->
+                    </tr>
+                    
+                </thead>
+                <tbody>
+                    <tr *ngFor="let track of topTracks">
+                        <td>
+                            <img [src]="track.album.images | noimage" class="img-thumb"/>
+                            
+                        </td>
+                        <td>{{track.album.name}}</td>
+                        <td>{{track.name}}</td>
+                        <!-- <td>-->
+                            <!--  <audio [src]="track.preview_url" controls></audio>-->
+                                <!-- </td>-->
+                        <td>
+                            <iframe [src]=" track.uri | domseguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media">
+                            </iframe>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="col-4 text-rigth">
-        <button [routerLink]="['/search']"  class="btn btn-outline-danger">Volver</button>
-    </div>
 
-
-</div>
-
-<div class="row m-5">
-    <div class="col">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Foto</th>
-                    <th>Álbum</th>
-                    <th>Canción</th>
-                    <th>Vista Previa</th>
-                </tr>
-                
-            </thead>
-            <tbody>
-                <tr *ngFor="let track of topTracks">
-                    <td>
-                        <img [src]="track.album.images | noimage" class="img-thumb"/>
-                        
-                    </td>
-                    <td>{{track.album.name}}</td>
-                    <td>{{track.name}}</td>
-                    <td>
-                        <audio [src]="track.preview_url" controls></audio>
-                    </td>
-                </tr>
-
-            </tbody>
-        </table>
-    </div>
 </div>
